fix: Исправила замечания